--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
   "dependencies": {
-    "nodemailer": "^6.7.3"
-  }
+    "@sendgrid/mail": "^7.6.2",
+    "dotenv": "^16.0.0"
+  },
+  "name": "@lawlzer/email",
+  "version": "1.0.0",
+  "description": "(Private package) - Send emails quickly without massive amounts of pain",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lawlzer/email.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Lawlzer/email/issues"
+  },
+  "homepage": "https://github.com/Lawlzer/email#readme"
 }
