--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "dependencies": {
-    "@sendgrid/mail": "^7.6.2",
-    "dotenv": "^16.0.0"
-  },
-
-  "name": "@lawlzer/email",
-  "version": "1.0.5",
-  "description": "(Private package) - Send emails quickly without massive amounts of pain",
-  "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
+    "webpack": "rimraf ./dist && webpack --config webpack.config.ts",
+    "clean": "rimraf ./dist"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Lawlzer/email.git"
+  "devDependencies": {
+    "@types/ms": "^0.7.31",
+    "@types/node": "^17.0.31",
+    "@typescript-eslint/parser": "^5.22.0",
+    "nodemon": "^2.0.16",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^4.0.0",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Lawlzer/email/issues"
-  },
-  "homepage": "https://github.com/Lawlzer/email#readme"
+  "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "@types/sendgrid": "^4.3.0"
+  }
 }
