--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
+  "name": "@lawlzer/email",
+  "version": "1.0.0",
+  "description": "My personal setup for easily sending Email messages. Would not recommend anybody else using it (non-documented, likely buggy)",
+  "main": "./dist/index.js",
+  "author": "",
+  "license": "ISC",
+  "types": "./dist\\index.d.ts",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
-    "webpack": "rimraf ./dist && webpack --config webpack.config.ts",
-    "clean": "rimraf ./dist"
+    "build": "rimraf ./dist && npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
     "@types/ms": "^0.7.31",
     "@types/node": "^17.0.31",
     "@typescript-eslint/parser": "^5.22.0",
     "nodemon": "^2.0.16",
     "rimraf": "^3.0.2",
+    "source-map-loader": "^3.0.1",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.6.4",
+    "typescript": "^4.7.2",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
