--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "./dist/index.js",
   "author": "",
   "license": "ISC",
-  "types": "./dist\\index.d.ts",
+  "types": "./dist//index.d.ts",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
-    "build": "rimraf ./dist && npm run build:types && npm run build:js",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline"
+    "build": "rimraf ./dist &&  npm run build:js && npm run build:types",
+    "build:types": "tsc",
+    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps true"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
@@ -20,6 +20,7 @@
     "@babel/preset-typescript": "^7.17.12",
     "@types/ms": "^0.7.31",
     "@types/node": "^17.0.31",
+    "@types/sendgrid": "^4.3.0",
     "@typescript-eslint/parser": "^5.22.0",
     "nodemon": "^2.0.16",
     "rimraf": "^3.0.2",
@@ -33,7 +34,6 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
-    "@types/sendgrid": "^4.3.0"
+    "@sendgrid/mail": "^7.7.0"
   }
 }
