--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lawlzer/email",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "My personal setup for easily sending Email messages. Would not recommend anybody else using it (non-documented, likely buggy)",
   "main": "./dist/index.js",
   "author": "",
@@ -12,6 +12,10 @@
     "build:types": "tsc",
     "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps true"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "devDependencies": {
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.2",
