--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lawlzer/email",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "My personal setup for easily sending Email messages. Would not recommend anybody else using it (non-documented, likely buggy)",
   "main": "./dist/index.js",
   "author": "",
@@ -25,7 +25,9 @@
     "@types/ms": "^0.7.31",
     "@types/node": "^17.0.31",
     "@types/sendgrid": "^4.3.0",
-    "@typescript-eslint/parser": "^5.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
     "nodemon": "^2.0.16",
     "rimraf": "^3.0.2",
     "source-map-loader": "^3.0.1",
